--- a/src/client/styles.sass
+++ b/src/client/styles.sass
@@ -1,5 +1,17 @@
 /* You can add global styles to this file, and also import other style files */
+*
+    box-sizing: border-box
+
 html, body
     height: 100%
     margin: 0
     padding: 0
+
+.app-container
+    max-width: 94%
+    margin: 0 auto
+    overflow: hidden
+
+@media screen and (min-width: 1200px)
+    .app-container
+        max-width: 1200px
