--- a/src/client/app/app.component.sass
+++ b/src/client/app/app.component.sass
@@ -1,15 +1,22 @@
+@import '~@angular/material/theming'
+@import '../custom_theme.sass'
+@include angular-material-theme($recepies-app-theme)
 .sidenav-container
     height: 100%
     width: 100%
+
 .sidenav
     width: 150px
     padding: 16px
     display: flex
-
+    background-color: mat-color($recepies-app-accent)
     &__button
         position: absolute
         top: 16px
         left: 16px
+        color: white
+    .mat-icon.mat-accent
+        color: mat-color($recepies-app-primary)
 
 .toolbar
     display: flex
@@ -17,3 +24,4 @@
     box-shadow: 0px 0px 2px 2px rgba(0,0,0,.25)
 
     &__button
+        color: mat-color($recepies-app-accent)
