--- a/src/client/app/recepies-list/recepies-list.component.sass
+++ b/src/client/app/recepies-list/recepies-list.component.sass
@@ -3,20 +3,29 @@
     flex-wrap: wrap
     justify-content: center
     &__item
-        width: 80%
+        width: 100%
         box-sizing: border-box
-        padding: 12px
+        padding: 15px
         margin: -10px
 
 
-    &__image
-        width: 100%
+    mat-card
+        height: 100%
+        display: flex
+        flex-direction: column
+        justify-content: space-between
+        mat-card-content
+            height: 225px
+            width: 100%
+            background-position: center
+            background-size: cover
+            border-radius: 5px
 
 
 @media screen and (min-width: 490px)
     .list-grid
         &__item
-            width: 48%
+            width: 50%
 
 
 @media screen and (min-width: 900px)
