--- a/src/client/app/app.component.sass
+++ b/src/client/app/app.component.sass
@@ -22,6 +22,7 @@
     display: flex
     justify-content: space-between
     box-shadow: 0px 0px 2px 2px rgba(0,0,0,.25)
+    background-color: mat-color($recepies-app-primary)
 
     &__button
         color: mat-color($recepies-app-accent)
