--- a/src/client/app/recepies-list/recepies-list.component.sass
+++ b/src/client/app/recepies-list/recepies-list.component.sass
@@ -1,25 +1,15 @@
 .list-grid
+    margin-top: 25px
     display: flex
     flex-wrap: wrap
     justify-content: center
     &__item
         width: 100%
         box-sizing: border-box
-        padding: 15px
+        padding: 20px 15px
         margin: -10px
 
 
-    mat-card
-        height: 100%
-        display: flex
-        flex-direction: column
-        justify-content: space-between
-        mat-card-content
-            height: 225px
-            width: 100%
-            background-position: center
-            background-size: cover
-            border-radius: 5px
 
 
 @media screen and (min-width: 490px)
