--- a/src/client/app/recepie-card/recepie-card.component.sass
+++ b/src/client/app/recepie-card/recepie-card.component.sass
@@ -9,6 +9,10 @@
     display: flex
     flex-direction: column
     justify-content: space-between
+    &__title
+        flex-grow: 1
+    &__subtitle
+        flex-grow: 1
     &__content
         height: 225px
         width: 100%
@@ -18,4 +22,6 @@
     &__actions
         display: flex
         justify-content: space-between
-        
+    img
+        max-height: 225px
+        object-fit: cover
