--- a/src/client/app/recepies-list/recepies-list.component.sass
+++ b/src/client/app/recepies-list/recepies-list.component.sass
@@ -12,13 +12,20 @@
 
 
 
-@media screen and (min-width: 490px)
+@media screen and (min-width: 560px)
     .list-grid
         &__item
             width: 50%
 
 
-@media screen and (min-width: 900px)
+@media screen and (min-width: 780px)
+    .list-grid
+        &__item
+            width: 33.3%
+
+
+
+@media screen and (min-width: 1048px)
     .list-grid
         &__item
             width: 25%
