--- a/src/client/custom_theme.sass
+++ b/src/client/custom_theme.sass
@@ -5,8 +5,8 @@ $custom-typography: mat-typography-config($font-family: 'Sarala, monospace', $he
 
 @include mat-core($custom-typography)
 
-$recepies-app-primary: mat-palette($mat-yellow)
-$recepies-app-accent:  mat-palette($mat-green)
+$recepies-app-primary: mat-palette($mat-green)
+$recepies-app-accent:  mat-palette($mat-yellow)
 $recepies-app-warn:    mat-palette($mat-deep-orange)
 
 $recepies-app-theme: mat-light-theme($recepies-app-primary, $recepies-app-accent, $recepies-app-warn)
