--- a/src/client/styles.sass
+++ b/src/client/styles.sass
@@ -11,6 +11,7 @@ html, body
     max-width: 94%
     margin: 0 auto
     overflow: hidden
+    margin-top: 24px
 
 @media screen and (min-width: 1280px)
     .app-container
