--- a/src/client/app/recepie-page/recepie-page.component.sass
+++ b/src/client/app/recepie-page/recepie-page.component.sass
@@ -6,10 +6,12 @@
         display: block
         width: 100%
         height: 225px
+
         img
-            max-width: 100%
-
-
+            max-height: 100%
+            width: 100%
+            object-fit: cover
+            object-position: center
 
 @media screen and (min-width: 600px)
     .recepie-page
@@ -26,3 +28,4 @@
             width: 50%
             img
                 max-width: 100%
+                max-height: auto
