--- a/src/client/app/recepie-page/recepie-page.component.sass
+++ b/src/client/app/recepie-page/recepie-page.component.sass
@@ -1,31 +1,54 @@
 .recepie-page
-    &__details-container
-        display: flex
-        flex-direction: column
+    display: flex
+    flex-direction: column
+    align-items: flex-start
     &__image
-        display: block
-        width: 100%
+        min-width: 100%
+        max-width: 100%
         height: 225px
-
+        flex-grow: 1
+        background-position: center
+        background-size: cover
+        align-self: stretch
+    //&__image
+        max-width: 100%
+        height: 225px
         img
-            max-height: 100%
-            width: 100%
+            max-width: 100%
+            min-width: 100%
+            height: inherit
             object-fit: cover
             object-position: center
+    &__details
+        width: 100%
+
+    &__content
+        width: 100%
+
+
+.recepie-details-list
+    list-style-type: none
+    padding: 0
+    &__item
+        margin-bottom: 4px
+        color: rgba(0,0,0,.55)
+
 
 @media screen and (min-width: 600px)
     .recepie-page
         &__image
-            height: 300px
 
 @media screen and (min-width: 768px)
     .recepie-page
-        &__details-container
-            flex-direction: row
+        flex-wrap: wrap
+        flex-direction: row
         &__image
-            align-self: stretch
+            min-width: inherit
+            max-width: 50%
+            margin-right: 16px
             height: auto
+
+        &__details
             width: 50%
-            img
-                max-width: 100%
-                max-height: auto
+        &__content
+            width: 100%
