Styling of page progress

--- a/src/client/app/recepie-page/recepie-page.component.sass
+++ b/src/client/app/recepie-page/recepie-page.component.sass
@@ -43,7 +43,7 @@
         flex-wrap: wrap
         flex-direction: row
         &__image
-            min-width: inherit
+            min-width: initial
             max-width: 50%
             margin-right: 16px
             height: auto
