--- a/src/client/app/recepie-page/recepie-page.component.sass
+++ b/src/client/app/recepie-page/recepie-page.component.sass
@@ -1,3 +1,7 @@
+@import '~@angular/material/theming'
+@import '../../custom_theme.sass'
+@include angular-material-theme($recepies-app-theme)
+
 .recepie-page
     display: flex
     flex-direction: column
@@ -10,20 +14,41 @@
         background-position: center
         background-size: cover
         align-self: stretch
-    //&__image
-        max-width: 100%
-        height: 225px
-        img
-            max-width: 100%
-            min-width: 100%
-            height: inherit
-            object-fit: cover
-            object-position: center
-    &__details
+        border-radius: 3px
+        box-shadow: 0px 2px 10px 1px rgba(0,0,0,0.3)
+        margin-bottom: 16px
+    &__panel-right
         width: 100%
+    &__title
+        font-size: 1.6em
+    &__buttons-container
+        display: flex
+        justify-content: space-between
+        margin-bottom: 16px
+    &__details
+        display: flex
+        justify-content: space-around
+        align-items: center
+        padding: 8px
+        background-color: mat-color($recepies-app-primary, 100)
+        color: mat-color($recepies-app-primary, 900)
+        .details-icons
+            display: flex
+            flex-direction: column
+            align-items: center
+            justify-content: center
+            overflow-x: hidden
+            &__text
+                text-align: center
+                display: block
+                margin: 0 4px
+                border-radius: 3px
+                max-width: 100%
 
     &__content
         width: 100%
+
+
 
 
 .recepie-details-list
@@ -37,18 +62,24 @@
 @media screen and (min-width: 600px)
     .recepie-page
         &__image
+            height: 275px
 
 @media screen and (min-width: 768px)
     .recepie-page
         flex-wrap: wrap
         flex-direction: row
         &__image
-            min-width: initial
+            min-width: inherit
             max-width: 50%
             margin-right: 16px
             height: auto
-
-        &__details
+            max-height: 600px
+            box-shadow: 0px 5px 10px 2px rgba(0,0,0,0.25)
+        &__buttons-container
+            justify-content: flex-end
+        &__button
+            margin-right: 8px
+        &__panel-right
             width: 50%
         &__content
             width: 100%
