--- a/src/client/app/recepie-page/recepie-page.component.sass
+++ b/src/client/app/recepie-page/recepie-page.component.sass
@@ -21,6 +21,8 @@
         width: 100%
     &__title
         font-size: 1.6em
+    &__subtitle
+        text-transform: uppercase
     &__buttons-container
         display: flex
         justify-content: space-between
@@ -47,16 +49,19 @@
 
     &__content
         width: 100%
+        margin-top: 16px
+        padding: 16px 0
+        box-shadow: 0px -5px 6px -4px mat-color($recepies-app-accent, 500)
 
 
 
 
 .recepie-details-list
     list-style-type: none
-    padding: 0
+
     &__item
         margin-bottom: 4px
-        color: rgba(0,0,0,.55)
+        color: rgba(0,0,0,.65)
 
 
 @media screen and (min-width: 600px)
