--- a/src/client/app/recepie-page/recepie-page.component.sass
+++ b/src/client/app/recepie-page/recepie-page.component.sass
@@ -2,6 +2,13 @@
 @import '../../custom_theme.sass'
 @include angular-material-theme($recepies-app-theme)
 
+.hidden
+    opacity: 0
+    height: 0
+    padding: 0
+    margin: 0
+    overflow: hidden
+
 .recepie-page
     display: flex
     flex-direction: column
@@ -25,8 +32,11 @@
         text-transform: uppercase
     &__buttons-container
         display: flex
-        justify-content: space-between
+        justify-content: space-around
+        flex-wrap: wrap
         margin-bottom: 16px
+    &__button
+        margin-bottom: 4px
     &__details
         display: flex
         justify-content: space-around
@@ -53,7 +63,10 @@
         padding: 16px 0
         box-shadow: 0px -5px 6px -4px mat-color($recepies-app-accent, 500)
 
-
+        .content__about
+            padding: 1px 8px
+            border-left: 5px solid mat-color($recepies-app-accent, 700)
+            box-shadow: 0px 2px 4px 1px rgba(0,0,0,0.3)
 
 
 .recepie-details-list
@@ -63,6 +76,8 @@
         margin-bottom: 4px
         color: rgba(0,0,0,.65)
 
+
+// MEDIA QUERIES
 
 @media screen and (min-width: 600px)
     .recepie-page
@@ -88,3 +103,6 @@
             width: 50%
         &__content
             width: 100%
+
+            .content__about
+                margin-left: 40px
