--- a/src/client/app/recepie-edit-form/recepie-edit-form.component.html
+++ b/src/client/app/recepie-edit-form/recepie-edit-form.component.html
@@ -1,31 +1,43 @@
-<form [formGroup]="recepiesForm" novalidate class="recepie-form" (submit)=(onSubmit())>
+<form [formGroup]="recepiesForm" novalidate class="recepie-form" (ngSubmit)=(onSubmit())>
     <mat-form-field class="recepie-form-field">
-        <label class="center-block">Name:
-             <input matInput class="form-control" formControlName="name">
-        </label>
+        <label class="center-block">Name:</label>
+        <input matInput class="form-control" formControlName="name">
+        <mat-hint>Siema</mat-hint>
     </mat-form-field>
 
     <mat-form-field class="recepie-form-field">
-        <label class="center-block">Headline:
-             <input matInput class="form-control" formControlName="headline">
-        </label>
+        <label class="center-block">Headline:</label>
+        <input matInput class="form-control" formControlName="headline">
+        <mat-hint>Siema</mat-hint>
     </mat-form-field>
 
     <mat-form-field class="recepie-form-field">
-        <label class="center-block">Summary:
-            <textarea matInput class="form-control" formControlName="summary"></textarea>
-        </label>
+        <label class="center-block">Summary:</label>
+        <textarea matInput class="form-control" formControlName="summary"></textarea>
+        <mat-hint>Siema</mat-hint>
     </mat-form-field>
 
     <mat-form-field class="recepie-form-field">
-        <label class="center-block">Main category:
-            <mat-select matInput formControlName="category">
-                <mat-option value="breakfast">breakfast</mat-option>
-                <mat-option value="dinner">dinner</mat-option>
-                <mat-option value="salad">salad</mat-option>
-            </mat-select>
-        </label>
+        <label class="center-block">Main category:</label>
+        <mat-select matInput formControlName="category">
+            <mat-option value="breakfast">breakfast</mat-option>
+            <mat-option value="dinner">dinner</mat-option>
+            <mat-option value="salad">salad</mat-option>
+        </mat-select>
     </mat-form-field>
+
+    <mat-form-field class="recepie-form-field">
+        <label class="center-block">Time:</label>
+        <input type="number" matInput class="form-control" formControlName="time">
+        <mat-hint>Enter the time in minutes.</mat-hint>
+    </mat-form-field>
+
+    <mat-form-field class="recepie-form-field">
+        <label class="center-block">Serves:</label>
+        <input type="number" matInput class="form-control" formControlName="serves">
+        <mat-hint>Enter the number of serves.</mat-hint>
+    </mat-form-field>
+
 
     <fieldset>
         <div formArrayName="ingredients">
@@ -37,7 +49,18 @@
             <button type="button" mat-raised-button color="primary" (click)=(addIngredient())>Add ingredient</button>
         </div>
     </fieldset>
-    
+
+    <fieldset>
+        <div formArrayName="instructions">
+            <mat-form-field class="recepie-form-field" *ngFor="let instruction of recepiesForm.controls.instructions.controls; let i=index">
+                <label class="center-block">Step: {{i+1}}:
+                    <input matInput class="form-control" formControlName="{{i}}">
+                </label>
+            </mat-form-field>
+            <button type="button" mat-raised-button color="primary" (click)=(addInstruction())>Add instruction</button>
+        </div>
+    </fieldset>
+
 
     <button type="submit" mat-raised-button color="warn">Submit</button>
 </form>
