--- a/src/client/app/recepie-edit-form/recepie-edit-form.component.sass
+++ b/src/client/app/recepie-edit-form/recepie-edit-form.component.sass
@@ -1,5 +1,35 @@
 .recepie-form
+    display: flex
+    flex-direction: column
+    width: 100%
+    &__section
+        width: 100%
+        display: flex
+        flex-direction: column
+        padding: 16px
+
+    .section
+        &__fieldset
+        &__array
+            display: flex
+            flex-direction: column
+            flex-grow: 1
+            justify-content: flex-start
 
 
-.recepie-form-field
-    display: block
+
+@media screen and (min-width: 500px)
+    .recepie-form
+        width: 80%
+        margin: 0 auto
+
+@media screen and (min-width: 768px)
+    .recepie-form
+        width: 100%
+        display: flex
+        flex-direction: row
+        flex-wrap: wrap
+        &__section
+            width: 50%
+            flex-grow: 1
+            justify-content: space-between
