--- a/src/client/styles.sass
+++ b/src/client/styles.sass
@@ -7,6 +7,9 @@ html, body
     margin: 0
     padding: 0
 
+body
+    font-family: 'Sarala', 'monospace'
+
 .app-container
     max-width: 94%
     margin: 0 auto
