--- a/src/client/app/recepie-edit-form/recepie-edit-form.component.sass
+++ b/src/client/app/recepie-edit-form/recepie-edit-form.component.sass
@@ -45,8 +45,12 @@
         display: flex
         flex-direction: row
         flex-wrap: wrap
+        margin: auto -16px
         &__section
             width: 50%
             flex-grow: 1
             justify-content: space-between
             padding: 16px
+
+        &__submit
+            margin-left: 16px
