--- a/src/client/app/recepie-edit-form/recepie-edit-form.component.html
+++ b/src/client/app/recepie-edit-form/recepie-edit-form.component.html
@@ -59,17 +59,19 @@
     <section class="recepie-form__section">
         <fieldset class="section__fieldset">
             <legend>Ingredients:</legend>
+
             <div class="section__array" formArrayName="ingredients">
                 <div class="section__record-container" *ngFor="let ingredient of recepiesForm.controls.ingredients.controls; let i=index">
                     <mat-form-field class="section__form-field">
                         <mat-placeholder>Ingredient {{i+1}}:</mat-placeholder>
                         <input matInput class="form-control" formControlName="{{i}}">
+                        <mat-error *ngIf="recepiesForm.controls.ingredients.controls[i].invalid">Field cannot be empty. Add content or remove field.</mat-error>
                     </mat-form-field>
-                    <button class="section__button" matSuffix mat-button type="button" color="warn" aria-label="delete step" (click)="deleteStep(this.ingredients, i);">
+                    <button class="section__button" matSuffix mat-button type="button" color="warn" aria-label="delete step" (click)="deleteStep('ingredients', i);">
                         <mat-icon>remove_circle_outline</mat-icon>
                     </button>
                 </div>
-                <button type="button" mat-raised-button color="primary" (click)="addStep(this.ingredients, 'ingredients')">Add ingredient</button>
+                <button type="button" mat-raised-button color="primary" (click)="addStep('ingredients')">Add ingredient</button>
             </div>
         </fieldset>
 
@@ -83,15 +85,16 @@
                     <mat-form-field class="section__form-field">
                         <mat-placeholder>Step {{i+1}}:</mat-placeholder>
                         <input matInput class="form-control" formControlName="{{i}}">
+                        <mat-error *ngIf="recepiesForm.controls.instructions.controls[i].invalid">Field cannot be empty. Add content or remove field.</mat-error>
                     </mat-form-field>
-                    <button class="section__button" matSuffix mat-button type="button" color="warn"aria-label="delete step" (click)="deleteStep(this.instructions,i);">
+                    <button class="section__button" matSuffix mat-button type="button" color="warn"aria-label="delete step" (click)="deleteStep('instructions',i);">
                         <mat-icon>remove_circle_outline</mat-icon>
                     </button>
                 </div>
-                <button type="button" mat-raised-button color="primary" (click)="addStep(this.instructions, 'instructions')">Add instruction</button>
+                <button type="button" mat-raised-button color="primary" (click)="addStep('instructions')">Add instruction</button>
             </div>
         </fieldset>
     </section>
-
+    <button class="recepie-form__submit" type="button" mat-raised-button color="accent">Cancel</button>
     <button class="recepie-form__submit" type="submit" mat-raised-button color="warn">Submit</button>
 </form>
