--- a/src/client/app/recepie-edit-form/recepie-edit-form.component.html
+++ b/src/client/app/recepie-edit-form/recepie-edit-form.component.html
@@ -95,6 +95,6 @@
             </div>
         </fieldset>
     </section>
-    <button class="recepie-form__submit" type="button" mat-raised-button color="accent">Cancel</button>
+    <button class="recepie-form__submit" type="button" mat-raised-button color="accent" (click)="onCancel()">Cancel</button>
     <button class="recepie-form__submit" type="submit" mat-raised-button color="warn">Submit</button>
 </form>
